# brc20-trading-bot

./: .gitignore  README.md  go.mod  go.sum  main.go  table.sql
constant/: constant.go
db/: db.go  db_remote.go  db_test.go  redis.go  redis_test.go
decimal/: decimal.go  decimal_test.go
model/: airdrop_record.go  airdrop_record_test.go  balance.go  balance_test.go  base.go  block.go  block_test.go  inscription.go  list_record.go  list_record_test.go  mint_record.go  mint_record_test.go  param.go  param_test.go  robot.go  robot_test.go  token.go  token_test.go
platform/: Cargo.toml  platform.go  platform_test.go
platform/src/: lib.rs  robot.rs
utils/: account.go  account_test.go  log.go  platform.go  platform_test.go
