[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
attohttpc = { version = "0.25", default-features = false, features = ["compress", "json", "tls-rustls"] }
finutils = { git = "https://github.com/FindoraNetwork/platform.git", branch = "main"}
ledger = { git = "https://github.com/FindoraNetwork/platform.git", branch = "main"}
zei = { git = "https://github.com/FindoraNetwork/zei.git", branch = "stable-main" }
anyhow = "1.0.79"
globutils = { git = "https://github.com/FindoraNetwork/platform-lib-utils", tag = "v1.0.0" }
dotenv = "0.15.0"
sha2 = "0.10.8"
base64 = "0.21.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "postgres"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"